--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -11,8 +11,7 @@ body {
 	overflow: scroll;
 }
 
-#mainBackground {
-	width: 100%;
+.mainBackground {
 	height: 250px
 }
 
@@ -51,7 +50,7 @@ body {
 }
 
 #NameArea {
-	margin: 0px 32px;
+	margin: 0px auto;
 	background-color: white;
 	color: black;
 	opacity: 0.8;
@@ -60,7 +59,8 @@ body {
 	width: 180px;
 	height: 40px;
 	text-align: center;
-	font-size: 20px
+	font-size: 20px;
+	display: block;
 }
 
 #NameArea::placeholder {
@@ -188,6 +188,8 @@ span {
 	border-radius: 50px;
 	font-size: 40px;
 	font-family: "Comic Sans MS", cursive, sans-serif;
+	margin: 45px auto;
+	display: block;
 }
 
 .hints:hover {
